Fix html validation errors and some layout issues in articles

--- a/articles/static/articles/css/articles.css
+++ b/articles/static/articles/css/articles.css
@@ -14,3 +14,13 @@
     font-size:1.5rem;
     font-style: italic;
 }
+
+
+.article-section{
+
+}
+@media (max-width: 767.98px) {
+    .article-section{
+        font-size:1rem;
+    }  
+}
